src/sass/styles.scss
@import './variables';
@import './reset';

.rbc-calendar {
  box-sizing: border-box;
  height: 100%;
  display: flex;
  flex-direction: column;
  align-items: stretch;
}

.rbc-calendar *,
.rbc-calendar *:before,
.rbc-calendar *:after {
  box-sizing: inherit;
}

.rbc-abs-full {
  overflow: hidden;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.rbc-ellipsis {
  display: block;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.rbc-rtl {
  direction: rtl;
}

.rbc-off-range {
  color: $out-of-range-color;
}

.rbc-off-range-bg {
  background: $out-of-range-bg-color;
}

.rbc-header {
  overflow: hidden;
  flex: 1 0 0%;
  text-overflow: ellipsis;
  white-space: nowrap;
  padding: 0 3px;
  text-align: center;
  vertical-align: middle;
  font-weight: bold;
  font-size: 90%;
  min-height: 0;
  border-bottom: 1px solid $cell-border;

  & + & {
    border-left: 1px solid $cell-border;
  }

  .rbc-rtl & + & {
    border-left-width: 0;
    border-right: 1px solid $cell-border;
  }

  & > a {
    &,
    &:active,
    &:visited {
      color: inherit;
      text-decoration: none;
    }
  }
}

.rbc-grouping-wrapper{
  flex:1;
  display: flex;
  justify-content: flex-start;
  align-items: stretch;;
}

.rbc-grouping-column {
  display: flex;
  flex-flow: column nowrap;
  height: 100%;
  min-width: 120px;
}

.rbc-header-label-grouping-column {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  padding: 0 3px;
  text-align: left;
  vertical-align: middle;
  font-size: 90%;
  min-height: 0;
  border-bottom: 1px solid $cell-border;
  border-left: 1px solid $cell-border;
  border-top: 1px solid $cell-border;
}

.rbc-header-label-grouping-column-week {
  min-height: 63px;
  border-bottom: 2px solid $cell-border;
}

.rbc-header-label-grouping-column-day {
  min-height: 43px;
  border-bottom: 2px solid $cell-border;
}

.rbc-label-container-grouping-column {
  flex: 1;
  display: flex;
  flex-flow: column nowrap;
  justify-content: center;
  border-left: 1px solid $cell-border;
  border-bottom: 1px solid $cell-border;
}


.rbc-label-container-grouping-column-week {
  border-bottom: 1px solid $cell-border;
}

.rbc-label-grouping-column {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  padding: 0 3px;
  text-align: left;
  vertical-align: middle;
  font-weight: bold;
  font-size: 90%;
  min-height: 0;
}

.rbc-button-link {
  color: inherit;
  background: none;
  margin: 0;
  padding: 0;
  border: none;
  cursor: pointer;
  user-select: text;
}

.rbc-row-content {
  position: relative;
  user-select: none;
  -webkit-user-select: none;
  z-index: 4;
}

.rbc-row-content-scrollable {
  display: flex;
  flex-direction: column;
  height: 100%;

  .rbc-row-content-scroll-container {
    height: 100%;
    overflow-y: scroll;
    -ms-overflow-style: none; /* IE and Edge */
    scrollbar-width: none; /* Firefox */

    -ms-overflow-style: none; /* IE and Edge */
    scrollbar-width: none; /* Firefox */

    /* Hide scrollbar for Chrome, Safari and Opera */
    &::-webkit-scrollbar {
      display: none;
    }
  }
}

.rbc-today {
  background-color: $today-highlight-bg;
}

@import './toolbar';
@import './event';
@import './month';
@import './agenda';
@import './time-grid';

